# Samad-Package-Manager

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  NEXT_STEPS.md  README.md  install.sh  plan.txt  rules.md  structure.md
.github/workflows/: release.yml
data/: spm-update.service  spm-update.timer  spmd.service  spmd.socket
data/sysusers.d/: spm.conf
data/tmpfiles.d/: spm.conf
docs/: architecture.md  contributing.md  installation.md  principles.md  usage.md
docs/man/: spm-fsck.8  spm-init.8  spm-repo-gen-key.8  spm-repo-sign.8  spm-sync.8  spm.8
scripts/: install-backends.sh  spmd.service
src/: bootstrap.rs  error.rs  fsck.rs  kernel.rs  lib.rs  output.rs  sync.rs  verify.rs
src/analyze/: mod.rs
src/backend/: mod.rs
src/cache/: mod.rs
src/cli/: args.rs  client.rs  group.rs  mod.rs
src/config/: mod.rs  paths.rs  repos.rs
src/daemon/: conflict.rs  ipc.rs  mod.rs  monitor.rs  permission.rs  store.rs  transaction.rs
src/db/: conflict.rs  files.rs  mapping.rs  mod.rs  packages.rs  transactions.rs  users.rs
src/index/: deb.rs  mod.rs  rpm.rs  sam.rs
src/integration/: desktop.rs  elf.rs  fs.rs  kernel.rs  man.rs  mod.rs  system.rs
src/isolation/: detector.rs  freezer.rs  mediator.rs  mod.rs
src/package/: build.rs  cleanup.rs  deb.rs  hooks.rs  mod.rs  query.rs  resolver_backup.rs  rpm.rs  sam.rs  scripts.rs  solver.rs  store.rs  transaction.rs  triggers.rs
src/package/extract/: deb.rs  mod.rs  rpm.rs
src/package/fetch/: debian.rs  download.rs  gs.rs  mod.rs  rpm.rs  scan.rs  verify.rs
src/package/install/: conflict.rs  local.rs  mod.rs  remove.rs  sandbox.rs  upgrade.rs  user.rs
src/package/resolver/: cache.rs  graph.rs  mod.rs
src/package/sandbox/: cgroups.rs  landlock.rs  launcher.rs  mod.rs  namespaces.rs  seccomp.rs
src/sandbox/: desktop.rs  mod.rs
src/store/: deduplication.rs  gc.rs  hardlink.rs  mod.rs
src/types/: config.rs  db.rs  mod.rs  package.rs  version.rs
src/util/: backend.rs  fs.rs  hash.rs  mod.rs  process.rs  user.rs
src/ux/: completions.rs  formatter.rs  mod.rs  progress.rs  prompts.rs
tests/: cli.rs  conflict_simulation.rs  package_install.rs
